--- a/Frontend/youRJube/src/index.html
+++ b/Frontend/youRJube/src/index.html
@@ -5,9 +5,11 @@
   <title>YouRJube</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="assets/logo2.jpg">
+  <link rel="icon" type="image/x-icon" href="assets/logo3.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+  <script src="https://vjs.zencdn.net/ie8/1.1.2/videojs-ie8.min.js"></script>
+  <link href="https://vjs.zencdn.net/7.8.3/video-js.css" rel="stylesheet" />
 </head>
 <body>
   <app-root></app-root>
